<resources>
    <string name="app_name">Incidencias</string>

    <string name="username">E-mail</string>
    <string name="password">Contraseña</string>

    <string name="title_activity_panel">App incidencias</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Acerca de</string>

    <string name="severity">Severidad</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="project">Proyecto</string>
    <string name="category">Categoría</string>

    <string-array name="severity_array">
        <item>Menor</item>
        <item>Normal</item>
        <item>Alta</item>
    </string-array>

    <string name="button_send">Registrar incidencia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
